# Kokkos-FFTX

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  FFTX_Kokkos_GPU_C2C_conv.cpp  FFTX_Kokkos_GPU_rconv.cpp  kokkos_mddft.cpp
